# caffe-windows-opencl

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  Targets.cmake
cmake/Modules/: FindOpenBLAS.cmake  FindOpenCL.cmake
example_bpcv/: create_gray_lmdb.cmd  hm_bpcv.cmd  hm_bpcv.py  lists_test.py  lists_train.py
example_bpcv/data/: caffenet_places.prototxt  mean.binaryproto  mean.npy  solver.prototxt  train_val.prototxt
example_bpcv/models/: readme.txt
example_heatmap/: heatmap.cmd  squeezenet_heatmap.py
example_heatmap/data/: squeezenet_v1.1.prototxt
examples/cifar10/: cifar10_quick_solver.prototxt  cifar10_quick_solver_lr1.prototxt  create_cifar10.cmd  train_quick.cmd
hmprjs/: README.md  create_gray_lmdb.cmd  heatmaps.py  lists_test.py  lists_train.py
hmprjs/data/: caffenet_places.prototxt  solver.prototxt  synset_places.txt  train_val.prototxt
hmprjs/models/: README.md
images/: README.md  readme.txt
include/caffe/: layer.hpp  loss_layers.hpp  net.hpp
include/caffe/layers/: accuracy_layer.hpp  base_conv_layer.hpp  conv_layer.hpp  dropout_layer.hpp  filter_layer.hpp  im2col_layer.hpp  input_layer.hpp  loss_layer.hpp  pooling_layer.hpp  relu_layer.hpp  softmax_layer.hpp  softmax_loss_layer.hpp
pyprjs/: classify.py  full_conv.py  full_conv_mulit.py  get_caffenet_model_binary.py  readme.md  squeezenet_heatmap.py  squeezenet_heatmap_cpu.py  squeezenet_heatmap_gpu.py
pyprjs/data/: imagenet_mean.npy
python/: CMakeLists.txt
python/caffe/: _caffe.pyd  net_gen.py
src/ViennaCL/: CMakeLists.txt
src/ViennaCL/cmake/: ViennaCLCommon.cmake  ViennaCLConfig.cmake.in
src/caffe/: CMakeLists.txt  common.cpp  device.cpp  net.cpp  syncedmem.cpp
src/caffe/greentea/: cl_kernels.cpp  greentea_im2col.cpp
src/caffe/layers/: base_conv_layer.cpp  data_layer.cpp
src/caffe/test/: CMakeLists.txt  test_caffe_main.cpp
src/caffe/util/: db_lmdb.cpp  io.cpp  signal_handler.cpp
src/clBLAS/: CMakeLists.txt
src/glog/: CMakeLists.txt
src/glog/src/: config.h
src/glog/src/glog/: logging.h
src/lmdb/: CMakeLists.txt  mdb_copy  mdb_dump  mdb_load  mdb_stat  mtest  mtest2  mtest3  mtest4  mtest5
src/viennacl/: CMakeLists.txt
src/viennacl/cmake/: CMakeLists.txt.in  FindOpenCL.cmake
src/viennacl/examples/: CMakeLists.txt
src/viennacl/examples/tutorial/: CMakeLists.txt
wpycaffe/: pyclassify.py
